@@ -1,6 +1,7 @@
 v3.00 final - Not yet released
 
 - ADDED: Data export: save a data object to a file series on disk
+- ADDED: Ability to download images from an OME database (OME image transform)
 
 - FIXED: Combo box width for Windows Look & Feel
 - FIXED: Lots of little bugfixes
